Fix missing constant in costs controller