@@ -4,13 +4,7 @@ import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
 import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import org.springframework.http.HttpStatus;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestAttribute;
-import org.springframework.web.bind.annotation.RequestHeader;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.ResponseStatus;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 import uk.gov.companieshouse.api.model.payment.Cost;
 import uk.gov.companieshouse.api.model.transaction.Transaction;
 import uk.gov.companieshouse.exception.DissolutionNotFoundException;
@@ -18,11 +12,9 @@ import uk.gov.companieshouse.exception.NotFoundException;
 import uk.gov.companieshouse.logging.Logger;
 import uk.gov.companieshouse.service.cost.CostService;
 
-import java.util.Collections;
 import java.util.List;
 
-import static uk.gov.companieshouse.model.Constants.ERIC_REQUEST_ID_KEY;
-
+import static uk.gov.companieshouse.model.Constants.*;
 
 @RestController
 @RequestMapping("/transactions/{transaction_id}/dissolution/{dissolution_id}/costs")
@@ -43,14 +35,13 @@ public class CostController {
     @GetMapping
     @ResponseStatus(HttpStatus.OK)
     public List<Cost> getCosts(
-            @RequestAttribute("transaction") Transaction transaction,
-            @PathVariable("transaction_id") String transactionId,
-            @PathVariable("dissolution_id") String dissolutionId,
-            @RequestHeader(value = ERIC_REQUEST_ID_KEY) String requestId) {
+            @RequestAttribute(TRANSACTION_KEY) Transaction transaction,
+            @PathVariable(TRANSACTION_ID_KEY) String transactionId,
+            @PathVariable(DISSOLUTION_ID_KEY) String dissolutionId,
+            @RequestHeader(HEADER_ERIC_REQUEST_ID) String requestId) {
         logger.info("Getting costs for transaction: " + transactionId + ", dissolution: " + dissolutionId + ", requestId: " + requestId);
         try {
-            var cost = costService.getCosts(dissolutionId);
-            return Collections.singletonList(cost);
+            return List.of(costService.getCosts(dissolutionId));
         } catch (DissolutionNotFoundException e) {
             throw new NotFoundException();
         }
